--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ osx_image: xcode8.3
 language: swift
 # cache: cocoapods
 podfile: Example/Podfile
-xcode_project: Example/DALI.xcodeproj # path to your xcodeproj folder
-xcode_scheme: Example/DALI.xcworkspace
+before_install:
+- gem install cocoapods # Since Travis is not always on latest version
+- pod install --project-directory=Example
+script:
+- set -o pipefail && xcodebuild -workspace Example/DALI.xcworkspace -scheme DALI-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- pod lib lint
