--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ osx_image: xcode8.3
 language: objective-c
 # cache: cocoapods
 podfile: Example/Podfile
-before_install:
-- gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild -workspace Example/DALI.xcworkspace -scheme DALI-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+xcode_workspace: Example/DALI.xcodeproj # path to your xcodeproj folder
+xcode_scheme: DALI-Example
+# before_install:
+# - gem install cocoapods # Since Travis is not always on latest version
+# - pod install --project-directory=Example
+# script:
+# - set -o pipefail && xcodebuild -workspace Example/DALI.xcworkspace -scheme DALI-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+# - pod lib lint
