Exposing socket enable/disable

--- a/Example/DALI.xcodeproj/xcshareddata/xcschemes/DALI-Example.xcscheme
+++ b/Example/DALI.xcodeproj/xcshareddata/xcschemes/DALI-Example.xcscheme
@@ -87,6 +87,13 @@
             ReferencedContainer = "container:DALI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = ""
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
