--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# OS X
+/# OS X
 .DS_Store
 
 # Xcode
@@ -30,4 +30,4 @@ Carthage
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-*Pods/
+Example/Pods/
