--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: objective-c
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-- pod update
+- pod update --project-directory=Example
 - pod install --project-directory=Example
 script:
 # - set -o pipefail && xcodebuild -workspace Example/DALI.xcworkspace -scheme DALI-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
